--- a/VirtualAnimal/VirtualAnimal/VirtualAnimalView.resx
+++ b/VirtualAnimal/VirtualAnimal/VirtualAnimalView.resx
@@ -129,4 +129,7 @@
   <metadata name="bgwForProgressBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>534, 18</value>
   </metadata>
+  <metadata name="tmrProgressBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>691, 18</value>
+  </metadata>
 </root>
