--- a/VirtualAnimal/VirtualAnimal/Properties/Resources.resx
+++ b/VirtualAnimal/VirtualAnimal/Properties/Resources.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Product_name_and_price" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Product_name_and_price.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="Save_Animal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save_Animal.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="Store_Data" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Store_Data.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
