--- a/VirtualAnimal/VirtualAnimal/Properties/Resources.resx
+++ b/VirtualAnimal/VirtualAnimal/Properties/Resources.resx
@@ -118,10 +118,67 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Eat1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eat1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Eat2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eat2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Product_name_and_price" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Product_name_and_price.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Save_Animal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save_Animal.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Sleep_Nap0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap0.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap01.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap02.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap03.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap04.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap05.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap06.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap07.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap08.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap09.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap10.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap11.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap12.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap13.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap14.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap15.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sleep_Nap16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sleep_Nap16.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
